9/8/23:
-Fixed entity parent/child relationships
-UI improvements for hierarchies, scrolling bug on entities with many children fixed .

7/8/23:
-CMake build updated and fixed
-Some scene loading bugs fixed and stability improvements


5/8/23:
-Events system changes
-Multiple active scene support
-Optimizations to physics/transform events
-Portal shader for fun

30/7/23:
-Editor bugfixing
-Assets now compiled into the core engine lib instead of needing to be in every project using it


28/7/23:
-ECS Overhaul - started using entt and event-driven architecture
-Made core engine API a library and seperated editor application from it
-Events system converted to using entt
-Fixed spotlight/pointlight shadows
-PCSS for directional lights
-Bloom post processing added - http://www.iryoku.com/next-generation-post-processing-in-call-of-duty-advanced-warfare
-Emissive materials and texture support
-Stability improvements, a few crashes (especially on window close) fixed


14/7/23:
-Blurring/upsampling fog passes converted to compute shaders, ~0.5ms performance gain
-Proper windows file explorer integration
-Skybox/env map editor (for now just an HDR loader)
-Editor bugfixing, more QOL features
-Smoother shadows with rotated poisson disk sampling
-GPU/CPU lifetime profiling timer macros

08/7/23:
-Huge fog improvements, depth-aware upsampling and blurring, decent performance
-Improvements on serialization, almost all data saved (some stuff that's about to change not included)
-GPU-driven physics (actually a bit slower, but needed for dynamic triangle meshes)
-Triangle mesh support, static and dynamic
-Some multi-entity selection utils
-Physics component refactoring (had no idea PxRigidActor existed)


04/7/23:
-Basic scene serialization/deserialization (not fully complete)
-Removed material buffer system, replaced with much better method
-More deletion/creation functionality - still not complete
-Entity duplication keybind
-Proper env map loader class seperate from skybox
